--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "firebase": "^11.9.1",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
+    "mammoth": "^1.8.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
+    "pdfjs-dist": "2.16.105",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
