--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "mammoth": "^1.8.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
-    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.5.136",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
